hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/protected_property_access2.php.exp
File "protected_property_access2.php", line 8, characters 7-8:
Typing error (Typing[4448])
  File "protected_property_access2.php", line 8, characters 11-14:
  Cannot access non-public members within expression trees.
  File "protected_property_access2.php", line 14, characters 13-22:
  Member defined here
