hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/protected_property_access2.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

abstract class MyBaseClass {
  public function test(): void {
    ExampleDsl`(MyClass $x) ==> {
      $x->prop;
    }`;
  }
}

abstract class MyClass extends MyBaseClass {
  protected ExampleInt $prop;
}
